[gd_scene load_steps=6 format=1]

[ext_resource path="res://Themes/Menu.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/ColorPicker.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = 25.0
content_margin/bottom = 25.0
bg_color = Color( 0.25098, 0, 0, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 2
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = 25.0
content_margin/bottom = 25.0
bg_color = Color( 0, 0.25098, 0, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 2
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = 25.0
content_margin/bottom = 25.0
bg_color = Color( 0, 0, 0.25098, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 2
border_blend = false
draw_bg = true

[node name="ColorPicker" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 1.0
margin/top = 0.0
margin/right = 1119.0
margin/bottom = 580.0
script/script = ExtResource( 2 )

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 780.0
margin/bottom = 220.0
color = Color( 1, 1, 1, 1 )

[node name="LabelR" type="Label" parent="."]

anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 260.0
margin/right = 806.0
margin/bottom = 180.0
text = "R"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RedSlider" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 260.0
margin/right = 780.0
margin/bottom = 320.0
custom_styles/slider = SubResource( 1 )
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="LabelG" type="Label" parent="."]

anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 340.0
margin/right = 806.0
margin/bottom = 100.0
text = "G"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GreenSlider" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 340.0
margin/right = 780.0
margin/bottom = 400.0
custom_styles/slider = SubResource( 2 )
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="LabelB" type="Label" parent="."]

anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 420.0
margin/right = 806.0
margin/bottom = 20.0
text = "B"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BlueSlider" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 420.0
margin/right = 780.0
margin/bottom = 480.0
custom_styles/slider = SubResource( 3 )
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[connection signal="value_changed" from="RedSlider" to="." method="redSliderValueChanged"]

[connection signal="value_changed" from="GreenSlider" to="." method="greenSliderValueChanged"]

[connection signal="value_changed" from="BlueSlider" to="." method="blueSliderValueChanged"]


